; ModuleID = '/home/carl/AnghaBench/radare2/libr/cons/extr_stiv.c_render_256.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/cons/extr_stiv.c_render_256.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"\1B[%d;5;%dm\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32 (i8*, i32, i32)*, i32*, i32*)* @render_256 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @render_256(i32 (i8*, i32, i32)* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32 (i8*, i32, i32)*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32 (i8*, i32, i32)* %0, i32 (i8*, i32, i32)** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32 (i8*, i32, i32)*, i32 (i8*, i32, i32)** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 1
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 2
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @rgb(i32 %10, i32 %13, i32 %16)
  %18 = call i32 %7(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 38, i32 %17)
  %19 = load i32 (i8*, i32, i32)*, i32 (i8*, i32, i32)** %4, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 2
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @rgb(i32 %22, i32 %25, i32 %28)
  %30 = call i32 %19(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 48, i32 %29)
  ret void
}

declare dso_local i32 @rgb(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
